<resources>
    <string name="app_name">Pcfy</string>
    <string name="accueil">Accueil</string>
    <string name="recherche">Recherche</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="favories">Favories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cr_er_une_annonce">Ajouter un poste</string>
    <string name="category">Catégorie</string>
    <string name="ajouter_une_annonce">Ajouter une annonce</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cree_un_compte">S\'inscrire</string>
    <string name="pas_de_compte">Pas un membre ?</string>
    <string name="price"> %1$s Dh </string>
    <string name="description">Description</string>
    <string name="status"> status %1$s </string>
    <string name="supprimer">supprimer</string>
    <string name="pas_de_favories">Pas de favories</string>
    <string name="logout">Se Deconnecter</string>
    <string name="settings">Réglages</string>
    <string name="Oui">Oui</string>
    <string name="ok">OK</string>
    <string name="no_thanks">Non merci</string>
    <string name="Cancel">Annuler</string>
    <string name="confirm_annonce_title">Confirmation de l\'annonce</string>
    <string name="confirm_annonce_message">lancer l\'annonce ?</string>
    <string name="confirm_demand_title">Confirmation de la demande</string>
    <string name="confirm_demand_message">lancer la demande ?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="confirm_user_title">Confirmation des informations</string>
    <string name="confirm_user_message">Êtes vous sûre de vôs informations ?</string>
    <string name="confirm_login_title">Connexion requis</string>
    <string name="confirm_login_message">Vous devez être connecté, Se connecter ?</string>
    <string name="user_modify_dialog_title"> Confirmation des changements</string>
    <string name="user_modify_dialog_message"> Etes vous sûre de vos informations</string>
    <string name="user_type">type du compte : %1$s </string>
    <string name="mes_informations">Mes informations</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="title_activity_settings">Réglages</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="dark_mode">dark_theme</string>
    <string name="language_pref">language_pref</string>
    <string name="refresh_token">"refresh token"</string>
    <string name="access_token">"access token"</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="pcfy_website">https://pcfy.vercel.app/</string>
    <string name="pcfy_website_regles">https://pcfy.vercel.app/regles</string>
    <string name="pcfy_customer_service_email">customerservicepcfy@gmail.com</string>
    <string name="pcfy_instagram">http://instagram.com/pcfy_electronics</string>
    <string name="pcfy_twitter">https://twitter.com/pcfy_electr</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pas_d_utilisateur_connect">Pas d\'utilisateur connecté</string>
    <string name="propos">à-propos</string>
    <string name="partager">Partager</string>
    <string name="user_image">user image</string>
    <string name="notre_site_web">Notre site WEB</string>
    <string name="confirmer_les_changements">Confirmer les changements</string>
    <string name="modifier_la_description">Modifier la description</string>
    <string name="changer_les_informations_de_votre_compte">Changer les informations de votre compte :</string>
    <string name="annonce_of">Les annonces de %1$s</string>
    <string name="no_annonce">Pas d\'annonces</string>
    <string name="annonce_delete_dialog_title">Demande de confirmation</string>
    <string name="annonce_delete_dialog_message">Êtes vous sûre de supprimer cette annonce ?</string>
    <string name="demand_delete_dialog_message">Êtes vous sûre de supprimer cette Demande ?</string>
    <string name="demand_modify_dialog_message">Êtes vous sûre des changements ?</string>
    <string name="visiter">Visiter</string>
    <string name="contactez_nous">Contactez-nous</string>
    <string name="ratez_notre_application">Ratez notre Application</string>
    <string name="ajouter_des_details">Ajouter des details</string>
    <string name="detail_title">"Ajouter des details"</string>
    <string name="ajouter">Ajouter</string>
    <string name="pas_de_details">Pas de details</string>
    <string name="permission">Votre autorisation est nécessaire pour utiliser notre service proprement</string>
    <string name="permission_required">Permission requis</string>
    <string name="you_cant">
        Vous ne pouvez pas choisir une image car l\'application n\'as pas le droit d\'accéder a
        votre galerie des photos
    </string>
    <string name="no_notifications">Autoriser les notifications pour booster vos ventes</string>
    <string name="you_cant_user">Vous ne pouvez pas modifier votre profile car l\'application n\'as pas le droit d\'accéder a
        votre galerie des photos</string>
    <string name="authorise">autoriser</string>
    <string name="image_selected">1 Image Selectionnée</string>
    <string name="multiple_images_selected">%1$d Image Selectionnée</string>
    <string name="quit_signup_title"> Quitter la registration ? </string>
    <string name="quit_signup_message"> Toutes vos informations seront perdues, Etes vous sûr ? </string>
    <string name="bienvenue_inscrivez_vous_en_simples_tapes">Bienvenue, Inscrivez vous en simples étapes .</string>
    <string name="retour">Retour</string>
    <string name="suivant">Suivant</string>
    <string name="connexion">Connexion</string>
    <string name="commander">Commander</string>
    <string name="details_title"> %1$s : </string>
    <string name="order_title">Confirmer</string>
    <string name="order_message">Choisissez la quantité voulue</string>
    <string name="order_positive">Confirmer</string>
    <string name="order_negative">Annuler</string>
    <string name="image_de_l_annonce">Image de l\'annonce</string>
    <string name="supprimer_l_image">Supprimer l\'image</string>
    <string name="changer_les_informations_de_votre_annonce">Changer les informations de votre annonce :</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer_caps">Supprimer</string>
    <string name="image_instructions_title">Confirmation</string>
    <string name="image_instructions_message">Vous êtes sur de supprimer l\'image de votre annonce ?</string>
    <string name="votre_commande">Votre Commande :</string>
    <string name="commander_maintenant">Commander maintenant</string>
    <string name="prix_du_produit">Prix du produit</string>
    <string name="frais_de_livraison">Frais de livraison</string>
    <string name="user_image_delete_title"> Attention </string>
    <string name="user_image_delete_message"> Vous êtes sur le point de supprimer votre image de profile !!. Êtes vous sûre ? </string>
    <string name="confirmation_message">Le vendeur a été notifié de votre commande , vous serez contacté dès qu\'il sera disponible.</string>
    <string name="commandes">Commandes :</string>
    <string name="changer_votre_mot_de_passe">Changer votre mot de passe</string>
    <string name="mes_achats">Mes achats</string>
    <string name="gerer_vos_commandes">Gerer vos commandes</string>
    <string name="id_res">id: %1$s</string>
    <string name="order_id_res">Order #%1$s</string>
    <string name="annonce_image_url">  </string>
    <string name="profile_image_url">  </string>
    <string name="channel_name"> Orders Channel</string>
    <string name="channel_description"> this channel handle orders notifications</string>
    <string name="new_order">Nouvelle commande</string>
    <string name="notification_body">Voir une nouvelle commande pour l\'annonce %1$s</string>
    <string name="warning_1">Rencontrer le vendeur dans un lieu public</string>
    <string name="warning_2">Vérifiez l\'article avant de l\'acheter</string>
    <string name="warning_3">Payez seulement après avoir récupéré l\'article</string>
    <string name="PCfy">PCfy est une plate-forme destinée aux consommateurs qui interconnecte et facilite les achats et ventes entre des vendeurs professionnels et des acheteurs consommateurs</string>
    <string name="terms_of_usage">terms of usage</string>
    <string name="j_accepte_les_conditions_d_utilisation_de_pcfy">J\'accepte Les conditions d\'utilisation de PCfy</string>
    <string name="interstitiell_test_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="product_image">product_image</string>
    <string name="annonce_success_msg">Annonce ajoutée avec succes</string>
    <string name="error_msg">Erreur l\'annonce n\'est pas ajoutée</string>
    <string name="demand_success_msg">Demande ajoutée avec succes</string>
    <string name="demand_error_msg">Erreur la demande n\'est pas ajoutée</string>
    <string name="annonce">Une Annonce</string>
    <string name="demande">Une Demande</string>
    <string name="ajouter_une_demande">Ajouter une Demande</string>
    <string name="que_voulez_vous_ajouter">Que Voulez vous ajouter ?</string>
    <string name="list_empty">Pas de demandes pour le moment reviens plus tard</string>
    <string name="error">Erreur Inattendue</string>
    <string name="Demandes">Demandes</string>
    <string name="rv_state">Recycler view state</string>
    <string name="my_demands">Mes demandes</string>
    <string name="no_auth">Utilisateur non authentifié</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_user_image_modify">UserImageModifyActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="image_modified_success">Image Modifiée avec success</string>
    <string name="image_deleted_success">Image supprimée avec success</string>
    <string name="demand_deleted_success">Demande supprimée avec success</string>
    <string name="image_deleted_fail">erreur inattendue pendant la suppression de l\'image</string>
    <string name="dissconected">Deconnecté avec success</string>
    <string name="une_annonce">Une Annonce</string>
    <string name="une_demande">Une Demande</string>
    <string name="login_success">Connecté avec success</string>
    <string name="no_defined">-</string>
    <string name="demand_page_image">demand_page_image</string>
    <string name="no_description">Pas de description pour le moment</string>
    <string name="no_price">Prix non determiné</string>
    <string name="creator_image">creator_image</string>
    <string name="annonce_modify_success">Annonce modifié avec succes</string>
    <string name="abonnements">abonnements</string>
    <string name="email">email</string>
    <string name="instagram">instagram</string>
    <string name="twitter">twitter</string>
</resources>