<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/accueil" />

    <item
        android:id="@+id/demands"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/Demandes" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/recherche" />

    <item
        android:id="@+id/postChoice"
        android:icon="@drawable/ic_baseline_note_add_24"
        android:title="@string/cr_er_une_annonce" />

    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favories" />

</menu>