<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AnnonceOrDemandChoiceFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/que_voulez_vous_ajouter"
            android:textSize="25sp" />

        <Button
            android:id="@+id/annonce_choice"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/annonce"
            android:textAllCaps="false"
            android:textAppearance="@style/AlataTextView"
            android:textColor="@color/color_on_primary"
            android:textSize="17sp"
            app:icon="@drawable/ic_baseline_shopping_bag_24"
            app:iconPadding="10dp"
            app:iconTint="@color/main_theme"
            app:strokeColor="@color/color_on_primary" />

        <Button
            android:id="@+id/demand_choice"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/demande"
            android:textAllCaps="false"
            android:textAppearance="@style/AlataTextView"
            android:textColor="@color/color_on_primary"
            android:textSize="17sp"
            app:icon="@drawable/baseline_local_offer_24"
            app:iconPadding="10dp"
            app:iconTint="@color/main_theme"
            app:strokeColor="@color/color_on_primary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>